k8s/logisticsms-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: soaring-logistics-ms-deployment
  namespace: soaring-clouds
  labels:
    k8s-app: soaring-logistics-ms
    version: v2
spec:
  template:
    metadata:
      labels:
        k8s-app: soaring-logistics-ms
        version: v2
    spec:
     # DNS is not working correctly from within OKE - hence all external hosts are identified as hostAliases with the IP address returned by pinging the host
     hostAliases:
     - ip: "192.30.253.113"
       hostnames:
        - "github.com"
     - ip: "130.117.76.9"
       hostnames:
        - "nominatim.openstreetmap.org"
     - ip: "169.46.82.169"
       hostnames:
        - "logs2.papertrailapp.com"
     containers:
     - name: soaring-logistics-ms
       image: lucasjellema/soaring-logistics-ms:1.0
       imagePullPolicy: Always
       resources:
         # keep request = limit to keep this container in guaranteed class
         limits:
           cpu: 100m
         requests:
           cpu: 100m
       ports:
       - containerPort: 4388
         name: api
         protocol: TCP
       - containerPort: 4500
         name: reload
         protocol: TCP
